<resources>
    <string name="app_name">Score</string>
    <string name="receiver">Receiver</string>
    <string name="sender">Sender</string>
    <string name="icon_content_description">Icon</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="ip">IP</string>
    <string name="port">Port</string>
    <string name="ip_addresses">IP Addresses</string>
    <string name="ip_address">IP Address</string>
    <string name="controls">Controls</string>
    <string name="speed">Speed</string>
    <string name="message_size">Message Size</string>
    <string name="configuration">Configuration</string>
    <string name="bytes">Bytes</string>
    <string name="bytes_second">Bytes/Second</string>
    <string name="keep_alive">Keep Alive</string>
    <string name="interval">Interval</string>
    <string name="ms">ms</string>
    <string name="reset">Reset</string>
    <string name="statistics">Statistics</string>
    <string name="data_redundancy">Data Redundancy</string>
    <string name="feedback_probability">Feedback Probability</string>
    <string name="generation_size">Generation Size</string>
    <string name="generation_window_size">Generation Window Size</string>
    <string name="generations">Generations</string>
    <string name="symbol_size">Symbol Size</string>
    <string name="symbols">Symbols</string>
    <string name="network">Network</string>
    <string name="protocol">Protocol</string>
    <string name="percent">%</string>
    <string name="feedback">Feedback</string>
</resources>
